# sqlite3-plus

./: .gitignore  CMakeLists.txt
include/sqlite3++/: Database.h  Result.h  ResultCode.h  ResultRow.h  SQLiteAssert.h  Statement.h  flags.h
include/sqlite3++/exceptions/: SQLiteError.h
include/sqlite3++/generic/: BytesUnowned.h  Finally.h  NoCopy.h  StrUnowned.h  TemplateAssertFalse.h  primitive_types.h  std_format_polyfill.h  templates.h  tuple_to_args.h
include/sqlite3++/internal/: RawStatement.h
include/sqlite3++/logging/: DummyLogger.h  Logger.h  ModuleLogger.h  OstreamLogger.h
include/sqlite3++/traits/: BindTraits.h  ReadTraits.h
scripts/: error_code_scraper.js
src/: Database.cpp
src/exceptions/: SQLiteError.cpp
src/internal/: RawStatement.cpp
src/private/: Database_Private.h
src/traits/: BindTraits.cpp
